# DataVisualizer

./: CLAUDE.md  Cargo.toml
.claude/: settings.json  settings.local.json
docs/: architecture.md  requirements.md  roadmap.md  tools.md
src/: app.rs  main.rs  theme.rs
src/data/: filter.rs  loader.rs  mod.rs  schema.rs  source.rs  udp_receiver.rs
src/plot/: colormap.rs  gpu_points.rs  map_plot.rs  mod.rs  plot_config.rs  scatter_plot.rs  scroll_chart.rs  spatial_grid.rs  styling.rs  sync.rs
src/state/: app_state.rs  mod.rs  perf_settings.rs  playback.rs  selection.rs
src/ui/: add_filter_dialog.rs  add_plot_dialog.rs  left_pane.rs  menu_bar.rs  mod.rs  plot_area.rs  plot_grid.rs  right_pane.rs  udp_stream_dialog.rs
tools/: udp_listener.py
tools/adsb_fetcher/: Cargo.toml
tools/adsb_fetcher/src/: api.rs  main.rs  record.rs  writer.rs
tools/udp_streamer/: Cargo.toml
tools/udp_streamer/src/: main.rs
