[workspace]
members = [
    ".",
    "tools/adsb_fetcher",
    "tools/udp_streamer",
]
resolver = "2"

[package]
name = "datavisualizer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "datavisualizer"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.34", features = ["persistence"] }
egui = "0.34"
egui_plot = "0.35"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
polars = { version = "0.44", features = ["csv", "lazy"] }
rfd = "0.15"
crossbeam-channel = "0.5"
walkers = "0.53"
puffin = "0.20.0"
puffin_http = "0.17.0"
rayon = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
