[package]
name = "adsb_fetcher"
version = "0.1.0"
edition = "2021"
description = "Fetch live ADS-B state vectors from OpenSky Network and write to CSV/Parquet"

[[bin]]
name = "adsb_fetcher"
path = "src/main.rs"

[dependencies]
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
polars = { version = "0.44", features = ["csv", "parquet", "lazy"] }
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3"
